# cv-builder

./: .gitignore  README.md  pyproject.toml
cv_builder/: __init__.py  __main__.py  constants.py  cv_generator.py  job_recommender.py  main.py  models.py  questionnaire.py  templates.py  utils.py  validators.py
cv_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cv_generator.py  test_job_recommender.py  test_models.py  test_utils.py  test_validators.py
