[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-builder"
version = "1.0.0"
description = "A Python CLI tool for building professional CVs and getting job recommendations"
requires-python = ">=3.10"
dependencies = [
    "fpdf2>=2.7.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
cv-builder = "cv_builder.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cv_builder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
